<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Travel Partner</string>
    <string name="tools_tour_name">Tour Name</string>
    <string name="tools_start_location">Start Location</string>
    <string name="tools_start_date_time">Start Date Time</string>
    <string name="tools_end_date_time">End Date Time</string>
    <string name="tools_remaining_time">Remaining Time</string>
    <string name="tour_name">Tour Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="add_new_tour">Add new Tour</string>
    <string name="txt_budget">Budget</string>
    <string name="tv_start_time_set">Start Time</string>
    <string name="tv_end_date_set">End Date</string>


    <string name="destination_search_hint">Where do you want to go?</string>
    <string name="tv_budget">Budget</string>
    <string name="current_amount">Current Amount</string>
    <string name="tv_amount">amount</string>
    <string name="txt_purpose">Purpose</string>
    <string name="txt_amount">Amount</string>
    <string name="dialog_title">Add Expense</string>
    <string name="expnse_date">Date</string>
    <string name="expense_purpose">Purpose</string>
    <string name="title_current_amount">Current Amount</string>

    <string name="location">Location</string>
    <string name="date_time">Date Time</string>
    <string name="temperature">Tp</string>
    <string name="condition">Condition</string>
    <string name="current_day">Day</string>
    <string name="current_date">Date</string>

    <string name="forecast_day">Day</string>
    <string name="forecast_text">Text</string>
    <string name="forecast_high">High</string>
    <string name="forecast_low">Low</string>
    <string name="current_wind">Wind</string>
    <string name="description">Text</string>
    <string name="current_high_temp">high</string>
    <string name="current_low_temp">low</string>
    <string name="current_lat">Lat</string>
    <string name="current_long">Long</string>

    <string name="pref_location_default">Dhaka</string>
    <string name="pref_temperature_unit_default">C</string>
    <string name="pref_wind_direction_format_default">arrow</string>
    <!-- Strings for formatting weather-related data -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>%2$s</string>
    <!--Array values-->
    <string name="temperature_unit_value_c">C</string>
    <string name="temperature_unit_value_f">F</string>
    <string name="temperature_unit_value_k">K</string>

    <string name="search_title">Search for city</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBElBzb7tHyiGqYxTrCCP3gBOoBq7L6Qvg</string>

    <!-- Route tracker -->
    <string name="title_activity_route">Map</string>
    <string name="toggle_button_text">Track my route</string>
    <string name="tools_start_time">Start</string>
    <string name="tools_stop_time">Stop</string>
    <string name="date">Date</string>

    <!--Weather -->
    <string name="next_10_days_forecast">Next 10 days</string>
    <!--Weather icon-->
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="wi_yahoo_0">&#xf056;</string>
    <string name="wi_yahoo_1">&#xf00e;</string>
    <string name="wi_yahoo_2">&#xf073;</string>
    <string name="wi_yahoo_3">&#xf01e;</string>
    <string name="wi_yahoo_4">&#xf01e;</string>
    <string name="wi_yahoo_5">&#xf017;</string>
    <string name="wi_yahoo_6">&#xf017;</string>
    <string name="wi_yahoo_7">&#xf017;</string>
    <string name="wi_yahoo_8">&#xf015;</string>
    <string name="wi_yahoo_9">&#xf01a;</string>
    <string name="wi_yahoo_10">&#xf015;</string>
    <string name="wi_yahoo_11">&#xf01a;</string>
    <string name="wi_yahoo_12">&#xf01a;</string>
    <string name="wi_yahoo_13">&#xf01b;</string>
    <string name="wi_yahoo_14">&#xf00a;</string>
    <string name="wi_yahoo_15">&#xf064;</string>
    <string name="wi_yahoo_16">&#xf01b;</string>
    <string name="wi_yahoo_17">&#xf015;</string>
    <string name="wi_yahoo_18">&#xf017;</string>
    <string name="wi_yahoo_19">&#xf063;</string>
    <string name="wi_yahoo_20">&#xf014;</string>
    <string name="wi_yahoo_21">&#xf021;</string>
    <string name="wi_yahoo_22">&#xf062;</string>
    <string name="wi_yahoo_23">&#xf050;</string>
    <string name="wi_yahoo_24">&#xf050;</string>
    <string name="wi_yahoo_25">&#xf076;</string>
    <string name="wi_yahoo_26">&#xf013;</string>
    <string name="wi_yahoo_27">&#xf031;</string>
    <string name="wi_yahoo_28">&#xf002;</string>
    <string name="wi_yahoo_29">&#xf031;</string>
    <string name="wi_yahoo_30">&#xf002;</string>
    <string name="wi_yahoo_31">&#xf02e;</string>
    <string name="wi_yahoo_32">&#xf00d;</string>
    <string name="wi_yahoo_33">&#xf083;</string>
    <string name="wi_yahoo_34">&#xf00c;</string>
    <string name="wi_yahoo_35">&#xf017;</string>
    <string name="wi_yahoo_36">&#xf072;</string>
    <string name="wi_yahoo_37">&#xf00e;</string>
    <string name="wi_yahoo_38">&#xf00e;</string>
    <string name="wi_yahoo_39">&#xf00e;</string>
    <string name="wi_yahoo_40">&#xf01a;</string>
    <string name="wi_yahoo_41">&#xf064;</string>
    <string name="wi_yahoo_42">&#xf01b;</string>
    <string name="wi_yahoo_43">&#xf064;</string>
    <string name="wi_yahoo_44">&#xf00c;</string>
    <string name="wi_yahoo_45">&#xf00e;</string>
    <string name="wi_yahoo_46">&#xf01b;</string>
    <string name="wi_yahoo_47">&#xf00e;</string>
    <string name="wi_yahoo_3200">&#xf077;</string>

    <!--Note -->
    <string name="hint_note_title">Title</string>
    <string name="hint_note_content">Content</string>
    <string name="tv_start_date_set">Start Date</string>
    <string name="destination">Destination</string>
    <string name="current_budget">Budget</string>
    <string name="label_created_at">create_date</string>
    <string name="note_details">Details</string>
    <string name="note_date">Date</string>
    <string name="btn_set_alarm">Set Alarm</string>
    <string name="set_alarm">Set the alarm clock!</string>
    <string name="btn_unset_alarm">Unset Alarm</string>
</resources>
