<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/tvTourName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            tools:text="@string/tools_tour_name"
            android:textSize="@dimen/home_text_size"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvStartLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="@string/tools_start_location"
        android:textSize="@dimen/home_text_size"/>

    <!--<com.google.android.gms.maps.MapView
        android:id="@+id/listMap"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_view_width"
        map:liteMode="true"
        map:mapType="none" />-->

    <TextView
        android:id="@+id/tvStartDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="@string/tools_start_date_time"
        android:textSize="@dimen/home_text_size"/>

    <TextView
        android:id="@+id/tvEndDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="@string/tools_end_date_time"
        android:textSize="@dimen/home_text_size"/>

    <TextView
        android:id="@+id/tvRemainingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        tools:text="@string/tools_remaining_time"
        android:textSize="@dimen/home_text_size"/>

    <Button
        android:id="@+id/btnTourEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tour Entry"
        android:onClick="btnTourEntryOnClick"/>

</LinearLayout>
