<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forecast_day"
        android:id="@+id/tvDay"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forecast_text"
        android:id="@+id/tvDescription"
        android:layout_below="@+id/tvDay"
        android:textSize="17sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Ic"
        android:textSize="35sp"
        android:id="@+id/tvForecastIcon"
        android:textColor="@color/white"
        android:layout_marginRight="62dp"
        android:layout_marginEnd="62dp"
        android:layout_alignBottom="@+id/tvDescription"
        android:layout_toLeftOf="@+id/tvHigh"
        android:layout_toStartOf="@+id/tvHigh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forecast_high"
        android:id="@+id/tvHigh"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forecast_low"
        android:id="@+id/tvLow"
        android:textColor="@color/white"
        android:layout_below="@+id/tvDay"
        android:layout_alignLeft="@+id/tvHigh" />
</RelativeLayout>