<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kichukkhon.android.travelpartner.Activity.TourEntryDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/entry_details_toolbar"
            layout="@layout/shared_toolbar_with_appbar" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tour_margin_bottom"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/txtTourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/tour_name"
            android:inputType="text"
            android:textSize="@dimen/tour_entry_text_size" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tour_margin_bottom"
        android:layout_marginTop="@dimen/tour_margin_top"
        android:layout_marginLeft="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_start_time_set"
            android:textSize="@dimen/date_time_set_text_size" />

        <TextView
            android:id="@+id/tvShowStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/date_time_set_text_size"
            tools:text="@string/tv_start_time_set" />

        <DatePicker
            android:id="@+id/startDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#007F4B"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tour_margin_bottom"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="@dimen/tour_margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_end_date_set"
            android:textSize="@dimen/date_time_set_text_size" />

        <TextView
            android:id="@+id/tvShowEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/date_time_set_text_size"
            tools:text="@string/tv_end_date_set" />

        <DatePicker
            android:id="@+id/endDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/txtBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/txt_budget"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"/>

</LinearLayout>
