<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    tools:context=".Activity.TourDetailsActivity">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.kichukkhon.android.travelpartner.Activity.AlarmActivity">

    <include layout="@layout/shared_toolbar_with_appbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLblDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textSize="15sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/destination"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/tour_entry_text_size"
            android:layout_marginBottom="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#8E8D8D"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tour_margin_top"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_start_date_set"
                android:textSize="@dimen/date_set_text_size" />

            <TextView
                android:id="@+id/tvShowStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="@dimen/date_set_text_size"
                tools:text="@string/tv_start_date_set" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tour_margin_bottom"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_end_date_set"
                android:textSize="@dimen/date_set_text_size" />

            <TextView
                android:id="@+id/tvShowEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="@dimen/date_set_text_size"
                tools:text="@string/tv_end_date_set" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#8E8D8D"></View>

        <TextView
            android:id="@+id/tvLblBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_budget"
            android:textSize="15sp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tvCurrentBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="@string/current_budget"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/tour_entry_text_size"/>

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



    </android.support.design.widget.CoordinatorLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/shared_navheader"
        app:menu="@menu/menu_navigation" />

</android.support.v4.widget.DrawerLayout>
