<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    tools:context=".Activity.TourDetailsActivity">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.kichukkhon.android.travelpartner.Activity.AlarmActivity">

        <include layout="@layout/shared_toolbar_with_appbar" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alarmTimePicker"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleX="0.90"
                android:scaleY="0.90"/>

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_set_alarm"
                android:id="@+id/start_alarm"
                android:onClick="startTimer"
                android:textSize="20sp"
                android:padding="12dp"
                android:background="@drawable/btn_shape"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/alarmText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_unset_alarm"
                android:id="@+id/stop_alarm"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/btn_shape"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:onClick="cancelTimer"
                android:layout_below="@+id/alarmText"
                android:layout_alignRight="@+id/alarmTimePicker"
                android:layout_alignEnd="@+id/alarmTimePicker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/set_alarm"
                android:id="@+id/alarmText"
                android:layout_below="@+id/alarmTimePicker"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/shared_navheader"
        app:menu="@menu/menu_navigation" />

</android.support.v4.widget.DrawerLayout>


